# osgWebApp

./: CMakeLists.txt  CMakeLists.txt.bak  README.md  test.cpp  test.js  test.wasm
res/models/: car_white_bak2.osgb
res/xosc/: colors.txt  cut-in.xosc  indices.txt  log.txt  test_traj.xosc  uvs.txt  vertices.txt
src/: DataDefine.h  FileManager.cpp  README.md  RoadManager.cpp  RoadManager.hpp  RoadNetwork.hpp  Storyboard.hpp  VBOSetupVisitor.hpp  WSClient.c  WSClient.h  main.cpp  playerbase.cpp  playerbase.hpp  roadgeom.cpp  viewer.cpp  viewer.hpp
src-gen/: main.h
